fix URL to URI.